--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,5 +1,45 @@
-{{!-- The following component displays Ember's default welcome message. --}}
-{{welcome-page}}
-{{!-- Feel free to remove this! --}}
+<div class="container">
 
-{{outlet}}
+  <h1>Ember JWT Token Auth Example App</h1>
+
+  {{#if session.isAuthenticated}}
+    <li><a href="#">Hi, {{sessionAccount.account.email}}</a></li>
+    <li><a href="#" {{action 'invalidateSession'}}>Logout</a></li>
+  {{else}}
+    <li>{{#link-to 'login'}}Log In{{/link-to}}</li>
+    <li>{{#link-to 'signup'}}Sign Up{{/link-to}}</li>
+  {{/if}}
+  <br>
+  <div class="panel panel-default">
+    <div class="panel-heading"><strong>Session Info</strong></div>
+
+    <div class="panel-body" style="background-color: #FEFFFF;">
+      <ul>
+  {{#each-in session.session as |category products|}}
+    <li>{{category}}:
+      <ul>
+        {{#each-in products as |a product|}}
+          <li>{{a}} -> {{product}}</li>
+        {{/each-in}}
+      </ul>
+    </li>
+  {{/each-in}}
+  session.data.authenticated.username={{session.data.authenticated.username}}
+</ul>
+      <ul>
+        <li>
+          <strong>Session is authenticated?</strong>  {{session.isAuthenticated}} {{session.session.isAuthenticated}} {{session.session.authenticated.authenticator}}
+        </li>
+
+        <li>
+          <strong>Session Contents:</strong>
+            <p style="word-wrap: break-word;">{{session-object-formatter session.data.authenticated}}</p>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+
+</div>
+  {{outlet}}
+
